<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/group"
        android:checkableBehavior="single"
        android:enabled="true"
        android:visible="true">
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/star_off"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_scan"
            android:icon="@android:drawable/ic_menu_camera"
            android:title="@string/scan_qr" />
        <item
            android:id="@+id/nav_display"
            android:icon="@android:drawable/ic_menu_search"
            android:title="@string/menu_lookup" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/menu_tools" />
        <item
            android:id="@+id/nav_map"
            android:icon="@android:drawable/ic_dialog_map"
            android:title="@string/menu_map" />
        <item
            android:id="@+id/nav_privacy"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/menu_privacy" />

    </group>

</menu>
